Fixed the horizontal overflow

--- a/style/main.scss
+++ b/style/main.scss
@@ -749,7 +749,7 @@ section:nth-of-type(2) {
 		padding: initial;
 	}
 	h2 {
-		padding: 0 5vw;
+		padding-left: 5vw;
 		color: $h_green;
 	}
 
@@ -769,6 +769,7 @@ section:nth-of-type(2) {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
+		overflow: hidden;
 		width: calc(100%/3);
 		height: 20vh;
 		color: #fff;
